[gd_scene load_steps=17 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://telefono.png" type="Texture" id=3]
[ext_resource path="res://icons8-información-64.png" type="Texture" id=4]
[ext_resource path="res://Archvos extra papime(2)/Sin título-1 1.png" type="Texture" id=5]

[sub_resource type="InputEventAction" id=1]
action = "uno"

[sub_resource type="ShortCut" id=2]
resource_name = "100%"
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "dos"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "tres"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 28, 40 )

[sub_resource type="InputEventAction" id=8]
action = "mas"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "menos"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
target = "res://Main.tscn"

[node name="Button" type="Button" parent="."]
margin_left = 272.0
margin_top = -128.0
margin_right = 284.0
margin_bottom = -92.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 152.0
margin_top = -240.0
margin_right = 164.0
margin_bottom = -220.0
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 64.0
margin_top = -264.0
margin_right = 76.0
margin_bottom = -244.0
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 720
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 2 )

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 26.9661
margin_top = 22.6154
margin_right = 79.9661
margin_bottom = 103.615
button_mask = 7
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 37.0001, 23 )
scale = Vector2( 1.17073, 1.08 )
normal = ExtResource( 3 )
shape = SubResource( 7 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( 23, 124 )
scale = Vector2( 1.17073, 1.08 )
normal = ExtResource( 4 )
shape = SubResource( 7 )

[node name="SinTítulo-11" type="Sprite" parent="TouchScreenButton2"]
position = Vector2( 80.5054, 509.431 )
scale = Vector2( 0.298598, 0.298598 )
texture = ExtResource( 5 )

[node name="Button5" type="Button" parent="."]
margin_left = 371.0
margin_top = -152.0
margin_right = 383.0
margin_bottom = -132.0
shortcut = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 566.0
margin_top = -133.0
margin_right = 578.0
margin_bottom = -113.0
shortcut = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="Camera2D" method="_on_Button4_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="Camera2D" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="TouchScreenButton2" to="." method="_on_TouchScreenButton2_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
